--- a/client/src/sass/shou.scss
+++ b/client/src/sass/shou.scss
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
- list-style: none;
- text-decoration: none;
+     list-style: none;
+     text-decoration: none;
 }
 .sssc{
         height:20px;
@@ -56,7 +56,7 @@ body {
         position: relative;
     }
 }
-.swiper-container {
+.swiper-container{
     width: 100%;
     height: 240px;
     img {
@@ -70,7 +70,8 @@ body {
     
   
     .pf{
-        margin-right: 10px;
+        margin-right:20px;
+        padding: 0;
     }
     img{
         width: 95px;
@@ -80,9 +81,8 @@ body {
     height: 300px;
     width: 230px;
     background: #fff;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding-top: 10%;
-     border-left: 10px solid  #f7f7f7;
 }
 .n4 {
     background: #fff;
@@ -94,9 +94,9 @@ body {
     }
 }
  .pf:hover{
-            transform:scale(1.02);
-             box-shadow:0px 1px 30px 2px #C0C0C0;
-            z-index:500;
+            transform:scale(1.01);
+             box-shadow:0px 1px 20px 1px #C0C0C0;
+           
             .n3{
                 border-left: 0px ;
             } 
@@ -138,14 +138,24 @@ del {
     color: #C0C0C0;
 }
 .pin {
+   
+    .aaa{
+   
+    padding: 0;
+}
 
     img {
         width: 322.75px;
     }
 }
 .he {
+   div{
+       padding: 0;
+   }
+     
     img {
         width: 215.16px;
+       
     }
 }
 .fu {
@@ -172,6 +182,7 @@ del {
         width: 300px;
         height: 240px;
         background: rgba(0.5,0.5,0.5,0.5);
+        
         padding: 10px;
 
         color: #fff;
@@ -185,9 +196,11 @@ del {
     }
 }
 .m2 {
-
     position: relative;
-    overflow: hidden;
+  div{
+      padding: 0;
+  }
+   
     a:hover{
         color:orange;
        
@@ -231,6 +244,7 @@ del {
 .m1 {
     display: flex;
     height: 150px;
+  
     background: #fff;
     border-right: 1px solid #DCDCDC;
 
@@ -316,6 +330,7 @@ del {
     background: #fff;
     height: 332px;
     overflow: hidden;
+     border-right:10px solid #f7f7f7;
     .haaa {
         width: 100%;
         padding: 20px;
@@ -438,21 +453,25 @@ del {
 
 .haaa2{
     display: flex;
+   
     padding: 0;
+    .pf2{
+         margin-right:20px;
+       
+         padding: 0;
+    }
    .pf2:hover{
-      transform:scale(1.02);
-       box-shadow:0px 1px 30px 2px #C0C0C0;
-       z-index:5;
+      transform:scale(1.01);
+       box-shadow:0px 1px 20px 1px #C0C0C0;
+       background: #fff;
+//     z-index:5;
 }
     .ha2{
-//     width:230px;
+       width:230px;
        height: 300px;
         background: #fff;
         text-align: center;
          padding-top: 15%;
-        
-      
-       border-left: 10px solid  #f7f7f7;
         img{
             width: 105px;
             height: 105px;
@@ -460,6 +479,7 @@ del {
     }
     
 }
+
 
 .ren{
    position: fixed;
@@ -515,5 +535,10 @@ del {
 }
 #goTopBtn:hover{
     color: #398439;
+}
+.aj2{
+    div{
+        padding: 0;
+    }
 }
 
